@@ -148,12 +148,14 @@ ACCEPT   -              -               tcp     135,139,445
       </listitem>
     </orderedlist>
 
-    <para>Shorewall supports default actions for the ACCEPT, REJECT, DROP and
-    QUEUE policies. These default actions are specified in the
+    <para>Shorewall supports default actions for the ACCEPT, REJECT, DROP,
+    QUEUE and NFQUEUE policies. These default actions are specified in the
     /etc/shorewall/shorewall.conf file using the ACCEPT_DEFAULT,
-    REJECT_DEFAULT, DROP_DEFAULT and QUEUE_DEFAULT options respectively.
-    Policies whose default is set to a value of "none" have no default
-    action.</para>
+    REJECT_DEFAULT, DROP_DEFAULT, QUEUE_DEFAULT and NFQUEUE_DEFAULT options
+    respectively. Policies whose default is set to a value of "none" have no
+    default action.</para>
+
+    <para></para>
 
     <para>In addition, the default specified in /etc/shorewall/shorewall.conf
     may be overridden by specifying a different default in the POLICY column
